[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/UniqueFish.gd" type="Script" id=1]
[ext_resource path="res://Textures/game/Fish.png" type="Texture" id=2]
[ext_resource path="res://Sounds/nom.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "move"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11 ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.05542
height = 12.5876

[node name="UniqueFish" type="Area2D" groups=[
"unique_fish",
]]
position = Vector2( 221.46, 406.009 )
scale = Vector2( 2, 2 )
z_index = 10
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 4
hframes = 3
frame = 6
region_enabled = true
region_rect = Rect2( 0, 0, 96.75, 128 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/move = SubResource( 1 )

[node name="bodyColl" type="CollisionShape2D" parent="."]
position = Vector2( 0.537731, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Nom" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="die_effect" type="Tween" parent="."]
playback_speed = 0.2
playback/speed = 0.2

[connection signal="area_entered" from="." to="." method="_on_Fish_area_entered"]
[connection signal="tween_completed" from="die_effect" to="." method="_on_die_effect_tween_completed"]
